# Trabajo_Remunerado-DATA4CCION

./: .gitignore  Databases_DAT4CCION.ipynb  Makefile  README.md  TrabajoRemuneradoDATA4CCION.deepnote  pyproject.toml
app/: app.py
data/: CEPALSTAT_3291_income_distribution_by_deciles_and_area.parquet  CEPALSTAT_4623_population_without_internet_access_at_home_by_quintiles_sex_and_area.parquet  CEPALSTAT_4788_total_population_by_sex.parquet  ILOSTAT_employment_by_sex_economic_activity_isic2.parquet  ILOSTAT_employment_by_sex_occupation_isco2.parquet  ILOSTAT_female_share_low_pay_earners.parquet  ILOSTAT_informal_employment_by_sex_age_education.parquet  ILOSTAT_low_pay_rate_by_sex.parquet  ILOSTAT_sdg_111_working_poverty_rate_by_sex_age.parquet  ILOSTAT_sdg_552_women_managerial_positions.parquet  ILOSTAT_sdg_552_women_senior_middle_management.parquet  ILOSTAT_sdg_831_informal_employment_by_sex_activity.parquet  ILOSTAT_sdg_851_hourly_earnings_by_sex.parquet  ILOSTAT_unemployment_by_sex_education.parquet  ILOSTAT_working_age_population_by_sex_education_status.parquet  ITU_internet_users_pct_female.parquet  ITU_internet_users_pct_male.parquet  ITU_internet_users_pct_total.parquet  ITU_men_domestic_time_work.parquet  ITU_men_domestic_work.parquet  ITU_women_domestic_time_work.parquet  ITU_women_domestic_work.parquet  Poblacion por genero y edad.csv  Tiempo total de trabajo.csv  df_tiempo_internet.csv  internet_users_pct_total.parquet
notebooks/: Databases_DAT4CCION.ipynb  ETL_EDA_DAT4CCION.ipynb
scripts/: build_latam_geojson.py  generate_datasets.py  tree.py
(+11 files in other folders)
