[project]
name = "trabajo-remunerado-data4ccion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "streamlit>=1.56.0",
    "wbgapi>=1.0.14",
]
